refactor(loader): jre environment support